# odocgen

./: Cargo.toml  README.md  run.sh
embeded/: class.css  index.html  index.js  quotes.list
src/: main.rs
static/: class.css  class.js  index.html  index.js
