[package]
name = "odocgen"
version = "0.0.1"
edition = "2021"
description = "Documentation generator for Odoo addons's Python code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rustpython-parser = "0.3.1"
